# datacrystal

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  llms.txt  pyproject.toml  pyrightconfig.strict.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  nightly.yml  release.yml
assets/: hero.avif  hero.md
benchmarks/: _gen.py  conftest.py  test_pr_gates.py
docs/: GUIDE.md  explanation.md  reference.md  tutorial.md
docs/design/: ADR-001-concurrency-contract.md  ADR-002-storage-read-views.md  ADR-003-delete-semantics.md  ADR-004-sorted-range-index.md  ADR-005-index-cache.md  ADR-007-blob-fields.md  COMMIT-DELTA-v1.md  CONCURRENCY-OPTIONS.md  DESIGN.md  DOCS_AUDIT_GUIDE.md  EVAL-STRATEGY.md  FEDERATION-WIRE-v1.md  KICKOFF.md  NAME.md  ROADMAP.md  SCALING.md  SDA-LAYERING.md  SPIKE-object-store-backend.md  SPIKE-pydantic-interop.md  STRESS-TEST.md  VISION.md
docs/how-to/: analytics.md  blobs.md  federation.md  ingest-and-memory.md  querying-and-paging.md  schema-evolution.md  search.md  snapshots-and-delta-log.md  vector-search.md  web-deployment.md
docs/research/: 2026-06-11-replication-transports.md  2026-06-20-fractal-followers-prior-art.md  2026-06-20-fractal-followers.md
docs/research/2026-06-10-concurrency/: raw.json
docs/research/2026-06-10-feasibility/: api-graphql.md  columnar-analytics.md  cpython-mechanics.md  lazy-memory.md  prior-art-zodb.md  query-gigamap.md  raw.json  search-vector-rdf.md  serialization.md  storage-engine.md  surface-usage.md
docs/research/2026-06-10-kickoff/: critique-data-perf.md  critique-fitness.md  critique-plan.md  dataset.md  fitness-functions.md  perf-suite.md  plan-contract.md  plan-dogfood.md  plan-merged.md  plan-tracer.md  raw.json
docs/research/2026-06-10-round2/: crdt.md  cross-examination.md  distributed-serverless.md  raw.json  rdf-native.md  rust-core.md  startup-boot.md
docs/research/2026-06-10-sda-layering/: judgment.md  raw.json  sda-concept.md  sda-specs-usage.md  sda-store-impl.md
evals/: .gitignore  README.md
evals/proving_grounds/: blob_store.py  deps_dev.py  gene_ontology.py  gleif.py  mastr.py  search.py  web_api.py
examples/federation/: README.md  coordinator.py  demo.py  follower.py
examples/journal/: journal.py
examples/minerals/: demo.py
src/datacrystal/: __init__.py  _async.py  _conditions.py  _containers.py  _entity.py  _errors.py  _follower.py  _ids.py  _index_cache.py  _indexes.py  _lazy.py  _pipeline.py  _records.py  _registry.py  _snapshot.py  _state.py  _store.py  arrow.py  deltalog.py  fts.py  testing.py
src/datacrystal/_storage/: __init__.py  lock.py  memory.py  protocol.py  sqlite.py
src/datacrystal/contract/: __init__.py  applier.py
src/datacrystal/contract/vectors/: _generate.py  expected.json
src/datacrystal/web/: __init__.py  _app.py  _federation.py  _pydantic.py  _reflect.py  _strawberry.py
tests/: conftest.py
tests/contract/: fts_consumer.py  golden_gen.py  test_conformance_kit.py  test_fts_spike.py  test_golden_deltas.py  test_replay_vectors.py
tests/contract/goldens/: registry.json
tests/extras/: test_arrow.py  test_deltalog.py  test_fts.py
tests/fitness/: test_contract_engine_free.py  test_dep_isolation.py  test_doc_links.py  test_federation_gate.py  test_graphql_no_n_plus_1.py  test_guide_drift.py  test_memory_bounded.py  test_pickle_free.py  test_readme_quickstart.py  test_replay_determinism.py  test_scale_shape.py  test_storage_shape_pinned.py
tests/integration/: _cache_crash_app.py  _crash_app.py  _crash_blob_app.py  _deltalog_crash_app.py  test_cache_crash.py  test_crash.py  test_crash_blob.py  test_deltalog_crash.py  test_journal.py  test_sql_rollback.py
tests/property/: test_codec_roundtrip.py  test_dirty_commit_machine.py  test_query_oracle.py
tests/unit/: test_async.py  test_blob.py  test_blob_streaming.py  test_containers.py  test_debug_safety_net.py  test_deep_graph.py  test_delete.py  test_durability.py  test_entity.py  test_format_version.py  test_index_cache.py  test_ingest_fastpath.py  test_lazy_collections.py  test_lazy_manager.py  test_lock.py  test_multivalued_index.py  test_order_by.py  test_pipeline.py  test_query.py  test_read_path.py  test_records.py  test_reverse_cache.py  test_reverse_ref.py  test_root.py  test_schema_evolution.py  test_selfref_adjacency.py  test_snapshot.py  test_sorted_index.py  test_store_roundtrip.py  test_strict_dangling_ref.py  test_submit.py  test_temporal_fields.py  test_thread_confinement.py  test_three_phase.py  test_unique.py  test_unique_cache_redesign.py  test_upsert.py
tests/web/: test_app_wiring.py  test_dataloader.py  test_federation_conformance.py  test_federation_read.py  test_federation_submit.py  test_follower_bootstrap.py  test_follower_contribute.py  test_follower_sync.py  test_from_pydantic.py  test_list_ref_boundary.py  test_reflect.py  test_rest_e2e.py  test_strawberry_reflect.py  test_to_pydantic.py
typings/snowballstemmer/: __init__.pyi
