[project]
name = "datacrystal"
version = "0.1.0.dev0"
description = "Embedded object-graph database for Python — your live objects, crystallized: transparent, pickle-free persistence with built-in queries, full-text/vector search, and zero-copy Arrow analytics"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "msgspec>=0.21.1",
    "pyroaring>=1.1.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.155.2",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datacrystal"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
