[project]
name = "datacrystal"
version = "0.6.0"
description = "Embedded object-graph database for Python — your live objects, crystallized: transparent, pickle-free persistence with built-in queries, full-text/vector search, and zero-copy Arrow analytics"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sven Hodapp", email = "sven.hodapp@gmail.com" }]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed",
]
dependencies = [
    "msgspec>=0.21.1",
    "pyroaring>=1.1.0",
]

[project.optional-dependencies]
fts = [
    "snowballstemmer>=3.0",
]
arrow = [
    "pyarrow>=21",
]
web = [
    "pydantic>=2",
    "fastapi",
    "strawberry-graphql",
]

[dependency-groups]
dev = [
    "duckdb>=1.5.3",
    "httpx>=0.28",
    "hypothesis>=6.155.2",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datacrystal"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
