[project]
name = "datacrystal"
version = "0.6.0"
description = "Embedded object-graph database for Python — your live objects, crystallized: transparent, pickle-free persistence with built-in queries, full-text/vector search, and zero-copy Arrow analytics"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sven Hodapp", email = "sven.hodapp@gmail.com" }]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed",
]
dependencies = [
    "msgspec>=0.21.1",
    "pyroaring>=1.1.0",
]

[project.optional-dependencies]
fts = [
    "snowballstemmer>=3.0",
]
arrow = [
    "pyarrow>=21",
]
web = [
    "pydantic>=2",
    "fastapi",
    "strawberry-graphql",
]

[dependency-groups]
dev = [
    "duckdb>=1.5.3",
    "httpx>=0.28",
    "hypothesis>=6.155.2",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datacrystal"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = ["D"]
# Residual-docstring baseline: rules that still fire in src/ after the D205/D209
# mechanical pass. The Google structural rules (D2xx layout, D4xx form) are
# ENFORCED from here on; these few are baselined so `ruff check .` is 0 and CI
# gates the rest immediately. Burn the nits down by deleting a line — never by
# adding `# noqa` (src pragmas are reserved for the magic-query typing exception).
extend-ignore = [
    "D205", # blank-line-after-summary: the descriptive house style runs the
            # summary straight into a multi-line first paragraph; a mechanical
            # blank line would split a sentence mid-thought. Burn down by hand.
    "D102", # undocumented-public-method: a handful of self-evident methods
            # (mostly protocol/dunder-adjacent) still lack a docstring.
    "D105", # undocumented-magic-method: __repr__/__eq__/__iter__ etc. — obvious
            # by signature; document only where the why is non-trivial.
    "D107", # undocumented-public-init: __init__ intent lives on the class
            # docstring in the house style; not every __init__ repeats it.
    "D403", # first-word-uncapitalized: one summary keys off a lowercase field
            # name ("name → factory"); capitalizing would misname it.
    "D415", # missing-terminal-punctuation: a couple of summaries open a `::`
            # literal block instead of ending in a period.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Docstrings are a src/ library contract; don't require them outside src/.
# evals/ are on-demand proving grounds (NOT unit tests, outside CI) — same
# rationale as tests/examples/benchmarks.
"tests/**" = ["D"]
"examples/**" = ["D"]
"benchmarks/**" = ["D"]
"evals/**" = ["D"]

[tool.pyright]
venvPath = "."
venv = ".venv"
